# fivem_artifacts_autoupdate

./: Cargo.toml  build.rs  icon.rc  readme.md
locales/: en.yml  pt-BR.yml
src/: main.rs
