[package]
name = "fivem-update"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
tempfile = "3.3"
select = "0.6.0"
scraper = "0.23.1"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sevenz-rust = { version = "0.6.1" }

