[package]
name = "fivem-update"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["stream", "json"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
tempfile = "3.3"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sevenz-rust = { version = "0.6.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
zip = "2.2.3"

