[package]
name = "fivem_update"
version = "0.1.6"
edition = "2024"
build = "build.rs"


[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["stream", "json"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
tempfile = "3.3"
regex = "1.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
zip = "2.2.3"
rust-i18n = "3.1.3"
sys-locale = "0.3.2"
clap-help = "1.3.2"

[package.metadata.winres]
original_filename = "fvem_update.exe"

[build-dependencies]
embed-resource = "3.0.2"
